--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name=".ExtensionDynamic" />
         <activity android:name=".PinchZoomMenu" />
         <activity android:name=".SepiaMenu" />
+        <activity android:name=".ConvolutionMenu" />
         <activity android:name=".ZoomMenu" />
         <activity android:name=".EgalizationHistogramm"></activity>
     </application>
