--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
         <activity android:name=".SepiaMenu" />
         <activity android:name=".ConvolutionMenu" />
         <activity android:name=".ZoomMenu" />
-        <activity android:name=".EgalizationHistogramm"></activity>
+        <activity android:name=".EgalizationHistogramm" />
     </application>
 
 </manifest>
