Début rotation, ne marche pas, je travaille dessus aujourd'hui

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
         <activity android:name=".ConvolutionMenu" />
         <activity android:name=".ZoomMenu" />
         <activity android:name=".EgalizationHistogramm" />
+        <activity android:name=".RotateMenu" />
         <activity android:name=".ReplaceMenu" />
         <activity android:name=".CropMenu"></activity>
     </application>
