Nouvelle branche pour le filtre cartoon et l'application d'un filtre au doigt, ne marche pas

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
         <activity android:name=".EgalizationHistogramm" />
         <activity android:name=".RotateMenu" />
         <activity android:name=".ReplaceMenu" />
+        <activity android:name=".FingerMenu" />
         <activity android:name=".CropMenu"></activity>
     </application>
 
